--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,18 @@
   justify-content: center;
   align-items: center;
 }
+.apply {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .manage {
   height: 100%;
 }
