--- a/src/containers/Login.scss
+++ b/src/containers/Login.scss
@@ -13,3 +13,16 @@
   text-align: center;
   color: rgb(24, 144, 255);
 }
+.login {
+  width: 300px;
+  margin: 0 auto;
+  position: relative;
+  top: 50%; 
+  transform: translateY(-50%);
+}
+
+.login-form-button {
+  .ant-btn-primary {
+    width: 100%;
+  }
+}
